chore: removed legacy and duplicate configurations in poms